docs: integrate Dokka 2.1.0 and add comprehensive KDoc documentation
- Added Dokka 2.1.0 plugin to project and verses module
- Added detailed KDoc comments for all core classes and methods in the verses library
- Resolved Dokka link warnings by using fully qualified names for external dependencies

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ activity = "1.10.0"
 constraintlayout = "2.2.0"
 recyclerview = "1.4.0"
 mockk = "1.14.0"
+dokka = "2.1.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -29,4 +30,5 @@ androidx-constraintlayout = { group = "androidx.constraintlayout", name = "const
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 android-library = { id = "com.android.library", version.ref = "agp" }
+dokka = { id = "org.jetbrains.dokka", version.ref = "dokka" }
 
