--- a/gradle.properties
+++ b/gradle.properties
@@ -23,4 +23,4 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 
 GROUP=com.woniu0936
-VERSION_NAME=1.0.0-alpha01
+VERSION_NAME=1.0.0-test
