--- a/gradle.properties
+++ b/gradle.properties
@@ -22,5 +22,5 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 
-GROUP=com.woniu0936
+GROUP=io.github.woniu0936
 VERSION_NAME=1.0.0-test
