--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -31,6 +31,6 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./verses/build/dokka/html
+          publish_dir: ./verses/build/dokka
           publish_branch: gh-pages
           force_orphan: true # This will ensure the branch only contains the docs and nothing else
