--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -55,8 +55,23 @@ jobs:
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
+          name: Verses ${{ github.ref_name }}
           generate_release_notes: true
           prerelease: ${{ contains(github.ref, '-') }}
+          body: |
+            ## 🌌 Verses ${{ github.ref_name }} is here!
+            
+            Minimalist, high-performance declarative UI building for Modern Kotlin. This release includes the latest stability improvements and optimized rendering logic.
+            
+            ### 📦 Artifacts
+            - **`verses-*.aar`**: Android Library Binary.
+            - **`verses-docs-*.zip`**: Full Dokka HTML API Reference.
+            
+            ### 📖 Documentation
+            Explore the full API and best practices in our [Official Documentation](https://woniu0936.github.io/Verses/).
+            
+            ---
+            *For a full list of changes, please see the **Changelog** below.*
           files: |
             verses/build/outputs/aar/*.aar
             verses-docs-*.zip
