--- a/gradle.properties
+++ b/gradle.properties
@@ -23,4 +23,4 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 
 GROUP=io.github.woniu0936
-VERSION_NAME=1.0.0-alpha6
+VERSION_NAME=1.0.0-beta02
